Add .env.example file and update setup instructions
- Created backend/.env.example with sample configuration
- Updated README.md with improved setup instructions
- Modified .gitignore to include .env.example while excluding .env
- Added examples for MongoDB Atlas and production JWT secrets

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist/
 .env.test.local
 .env.production.local
 
+# Keep the example file
+!.env.example
+
 # IDE and editor files
 .vscode/
 .idea/
